# my-iptv2

./: .gitignore  README.md  channels.m3u  package-lock.json  package.json
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
